--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -691,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "IPSC_Diff_opt-ZBeNaM51",
    "language": "python",
    "name": "python3"
   },
@@ -705,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
