--- a/notebooks/data_generation.ipynb
+++ b/notebooks/data_generation.ipynb
@@ -293,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "IPSC_Diff_opt-ZBeNaM51",
    "language": "python",
    "name": "python3"
   },
@@ -307,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
