--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -2753,9 +2753,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4c98573-52d5-469e-a3f6-5f29b3d81e2c",
+   "metadata": {},
+   "source": [
+    "## Viability and Yield\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "55c24053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_purity = df[\"Purity\"]\n",
+    "y_viability = df[\"Viability\"]\n",
+    "y_yield = df[\"Yield\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0524b6d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train three separate models (if not already done)\n",
+    "rf_purity = RandomForestRegressor().fit(X, y_purity)\n",
+    "rf_viability = RandomForestRegressor().fit(X, y_viability)\n",
+    "rf_yield = RandomForestRegressor().fit(X, y_yield)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "1e1980f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/rf_yield.pkl']"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save models\n",
+    "joblib.dump(rf_purity, \"../models/rf_purity.pkl\")\n",
+    "joblib.dump(rf_viability, \"../models/rf_viability.pkl\")\n",
+    "joblib.dump(rf_yield, \"../models/rf_yield.pkl\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c98573-52d5-469e-a3f6-5f29b3d81e2c",
+   "id": "f31483cf",
    "metadata": {},
    "outputs": [],
    "source": []
