--- a/notebooks/data_generation.ipynb
+++ b/notebooks/data_generation.ipynb
@@ -274,18 +274,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3b8ef45b-73e4-4960-b0a4-407e99990235",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"ipsc_differentiation_data_with_genes.csv\", index=False)"
+    "# df.to_csv(\"ipsc_differentiation_data_with_genes.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "693ffd9c-77d0-46bc-b59e-097b06bb5619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/ipsc_differentiation_data_with_genes.csv\")\n",
+    "x = df.drop(columns=[\"Purity\", \"Viability\", \"Yield\",\"Batch_ID\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f0b9bbc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.to_csv(\"../data/features_only.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "693ffd9c-77d0-46bc-b59e-097b06bb5619",
+   "id": "f017bc5f",
    "metadata": {},
    "outputs": [],
    "source": []
